# ChangeLog for dev-db/hyperdex
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/hyperdex/ChangeLog,v 1.19 2014/05/07 03:59:38 patrick Exp $

*hyperdex-9999 (07 May 2014)

  07 May 2014; Patrick Lauer <patrick@gentoo.org> +hyperdex-9999.ebuild:
  Add -9999 ebuild

*hyperdex-1.2.0-r1 (07 May 2014)

  07 May 2014; Patrick Lauer <patrick@gentoo.org> +hyperdex-1.2.0-r1.ebuild,
  -hyperdex-1.0.1.ebuild, -hyperdex-1.0.5.ebuild, -hyperdex-1.2.0.ebuild:
  Migrate to new python eclass, remove old

*hyperdex-1.2.0 (06 May 2014)

  06 May 2014; Patrick Lauer <patrick@gentoo.org> +hyperdex-1.2.0.ebuild:
  Bump

*hyperdex-1.1.0 (21 Feb 2014)

  21 Feb 2014; Patrick Lauer <patrick@gentoo.org> +hyperdex-1.1.0.ebuild:
  Bump, restrict tests as they fail to build

  10 Feb 2014; Patrick Lauer <patrick@gentoo.org> hyperdex-1.0.5.ebuild:
  Tests work again, so unrestrict

*hyperdex-1.0.5 (10 Feb 2014)

  10 Feb 2014; Patrick Lauer <patrick@gentoo.org> +hyperdex-1.0.5.ebuild:
  Bump

  12 Dec 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneeded useflag from metadata.xml

*hyperdex-1.0.1 (11 Dec 2013)

  11 Dec 2013; Patrick Lauer <patrick@gentoo.org> +hyperdex-1.0.1.ebuild,
  -hyperdex-0.4.0.ebuild, -hyperdex-1.0_rc1.ebuild, -hyperdex-1.0_rc2.ebuild,
  -hyperdex-1.0_rc3.ebuild, -hyperdex-1.0_rc4.ebuild, -hyperdex-1.0_rc5.ebuild:
  Bump, remove old

  20 Nov 2013; Patrick Lauer <patrick@gentoo.org> hyperdex-1.0_rc5.ebuild:
  Whitespace

*hyperdex-1.0_rc5 (20 Nov 2013)

  20 Nov 2013; Patrick Lauer <patrick@gentoo.org> +hyperdex-1.0_rc5.ebuild:
  Bump, tests restricted as they fail

  10 May 2013; Patrick Lauer <patrick@gentoo.org> hyperdex-1.0_rc3.ebuild,
  hyperdex-1.0_rc4.ebuild:
  Quoting

*hyperdex-1.0_rc4 (15 Apr 2013)

  15 Apr 2013; Patrick Lauer <patrick@gentoo.org> +hyperdex-1.0_rc4.ebuild:
  Bump

*hyperdex-1.0_rc3 (25 Feb 2013)
