@@ -3,8 +3,10 @@ AUX hyperdex.initd 337 SHA256 e7d7838d534d71df80cb358fa30b34a059b5d7f929acfc80f7
 DIST autotools-java.tar 2770 SHA256 b74a069cf94d05cfbfe3eb65d42603d9a9d46a130044d76ffbf55ae822b62b3d SHA512 a193c3c3f8cc654967905c9ab559098425f1688a75c21a4207959fbe13572b4dba3e5c21e04913f20e5aa1b1c2fd2b13dcef91cc4f031b06884ac3130edc5757 WHIRLPOOL 3fbf5f0ab1a4bd231e69f924442f047c1e872f04c85afc46dca423c93641264347dc2d2c2a8b1cca740bf349d4db02594144c3797eb1c4bd649a35c169f7c86e
 DIST hyperdex-1.1.0.tar.gz 1243852 SHA256 e4e10bb85fb44e0bc479dfad6f6e7ee7aef00edc310b9069db3db44bb0b0e143 SHA512 54cb5ca1f14f4744885639c38ab1a84959100b80df50da1befa86db7fb1046e1045a84378b7dae253935f9c7bcfca6fa37ec1bfe699f611c55fe75b18f0fd37e WHIRLPOOL 5bf9b88f17b4e2a32aff6182a4734f9aeacd5e5ab9b83525edd917a399992612d27161bbcfdc4217cf84ae33530a743a5f75a10f788817a5336c9ab99161b345
 DIST hyperdex-1.2.0.tar.gz 1318103 SHA256 37a3accf8262fadfd2c357543ae5c39286f2071c60ee7ff7d29a826c305443ed SHA512 bd6904fa6a8a2d6c350b3276229e6e7b8bf02628a5719ac64b348f7e8561dab54814c1ebb2b490ac09528d7f2af2b585fdcb6f4d22a65446f91e6dcd92c3eadd WHIRLPOOL 588dd18308d0f1382283d761fc447a7c5e8939135a46e5e9d999368997f974c4dd63a7661e7554971843160270ef245975ea790060dc2a14cb2c210c1d084cd7
+DIST hyperdex-1.3.0.tar.gz 1328880 SHA256 baf994550565a5e3093944bb8a919582d9dc55c82e11a89eeb0322a904d58ae7 SHA512 96f679f97933004918784127b7d7dc9c7949bdab77486c71f4d1715a76a6e0d0d747b8f31b3984fe9bed4d5823e62d471319b30e2274ae9cef82ad8e07439073 WHIRLPOOL a1d24d563eb8f4b54e23a49c5d25996cf7bcdac43786a604ff88fbc97fa86f01c3a812c678fd3214818b56de90172d981db5fefaa93337d53ceb602c71666631
 EBUILD hyperdex-1.1.0.ebuild 1134 SHA256 31814128e09c1e563c2b94c3f82d3192088149401fc5c7d24b9f49e5c72df7b7 SHA512 5db1289cd508879caccdbe59f588cf5a639e2cc709913907d37553605779e55b123da109990e80496868e5384c2ae61b9833b8381724f7d4d0164518ceb549b0 WHIRLPOOL f99300906a6d3f830ef764fcb8cc989273b176c8751981dbaf5e068389029f84c951e75e1e61dd7c510502b32387de0328dd15d535c015b998d45069223dd3e2
 EBUILD hyperdex-1.2.0-r1.ebuild 1371 SHA256 3a74f7526ee4ea614571bbb6561fe51a28cc6da7ca2ee6c7aee035c8bdc0a739 SHA512 764066b5ab9ce21b8c9d75563bba3f70578ff8c80b87e885b4735f45b28f49f08294e9232b9b778d677eaba42abbec3504c6a536051ad6a227e254b921957873 WHIRLPOOL 89345c231abfce94931e056ae51d70b91061194078f099d5b1ba64ddb620085dca8cde485043f321ec47bd135c3530f2bc78d051d712f5d69286cdd25d3d16f6
+EBUILD hyperdex-1.3.0.ebuild 1352 SHA256 2d41216c93b1a53366e66fa4723db5e76fa122970993e9ca853ccdb7e2c3c51d SHA512 449d48700a835c03cc99a0985fda3de28897ed711a985e7f258c841817aa6f55b653b8b1a3cebd25a3afb6f8571f9896cc9c44488e1f73160932170e2dfac64f WHIRLPOOL 13d87820feb6dfc06ac3c7f8f6904c72e337b8c7ec3b373748abe108852c5ef9fa309ad5c29da0864d9ffefa506d2f1464d8cba3e2fdebbe6506ebff158400a5
 EBUILD hyperdex-9999.ebuild 1400 SHA256 8d76edad580d2b09328843a42cee999ddab4fe7945f609da81611977f6718836 SHA512 a63a3ad046432a7d91813d1f879e1817a70896738097200814d70978dcd02b69802c07b131961c926f6d6906c11549e76e49ea0a47aba409fc0a00a39c02a7f9 WHIRLPOOL b14210a4fc448a1e1cb319ef22f093f2794f0e4d14b217ab0c03686e336371760d6aed5428f852a15535db29dce829eb5aa3009bc2078e88f1df64bfb4e92249
-MISC ChangeLog 2799 SHA256 69ae76d9444b1c31df01afe2ed4783587d69b448df0812d0319d6666e3b25e44 SHA512 9372f3a5f5bf4f76570c2acb519d46847ab85647ba214469f278a4bc5e81ed2bf7a645b28057e95bb94c8c683e58336301010ed11b07e01a3ca7e66cd48b73ec WHIRLPOOL 1c482839ccddfdbde63a46251947c5660fc201dca6871e7c46cec3826eb58d9c400c1d8c97c585122c0ae6091fcbac73e97df148f1411959c74e9122611ba5cf
+MISC ChangeLog 2912 SHA256 cc2fb87f592d4fdd50b77d3c203445ecf9d82fc35fb95cb9455165f8d6111745 SHA512 40d3494eeeabe2dc42963434de4dd034a451b5e0df40e6bec2d8d9792115b2eaef4ae40a62d2a89189de01d8b838c685b2c4af363b08aeef1fbe966e89fb5063 WHIRLPOOL d0f380b9d03370364dae783dbe63d59879703b2130ca04568729b8a7c0d2f09f2d8b5686212dc28a22d28bee16d7be932a77d84356a6623eef9f3a76782acb46
 MISC metadata.xml 234 SHA256 18b8701557e457986cd3ce541fc05fb724a82e245bba5ae63959ec6916ea48a8 SHA512 23d74b4992965abe1c0d6bb9d511112de64e5a8ee25ef5bd9a7b7c0119a8d30e6c04439314f35cf9f93d9d6aeb1986868056e9d5912409188a030ff6eb2bfca3 WHIRLPOOL 387f1e5516b42cb431a743b804f89a52b02f2d2105465a9cc39073badce1960f1f518ce4c53d5193a899a421fe574b47186d39ecfd2205fd66d9c57daf66288d
