@@ -22,6 +22,7 @@ DIST relax-3.1.4.src.tar.bz2 70770485 SHA256 40377da2f24c7d70d08691d023fd6ca8696
 DIST relax-3.1.5.src.tar.bz2 70768909 SHA256 e8948a19b4e0ed8ce8c05402e4b920ad66a11686fc19ab782c33f888f4a6502f SHA512 4f62a734a5b02fdc2d11b1162de0474bf76c06f221b13677fe9496363c7eaba3c214c1319e3f9fef43b21641329dcefc577125cf69cc50a98d36e1dcddd84027 WHIRLPOOL e3b51ce0f1d83efb3f21fa7f23c57359427739244319b4a1bd4e043c22dc8942b84fa20418a7c450f3bcb0c9549e2b6284e9dac843c70bb7db1a96ea0cc98d8e
 DIST relax-3.1.6.src.tar.bz2 84506476 SHA256 6a6a085e95c3ccf268a0668042eaa6b1e92595b2a5dc745eb1a13cec4cb63ae9 SHA512 8257cf61b3fb0f19731d15f02afc98c3460e532fe907138d64b62c517945f028bf133dd0c5b3071715935520fad0c02e44042a8a6a5d9a2c254771bfa8f6633a WHIRLPOOL bc7de14eba0576e7d17cc663538f7f6448ac580511ca432fa7820bf27c61b45cf1d76773eac47d626667fde07f5a109a23cc04a5e7b5f5170d5f8bd30e7f1246
 DIST relax-3.1.7.src.tar.bz2 84624222 SHA256 c48883719565253b905e37b380710403b1b099bf7d4ad4edbaec93d808a9a7ba SHA512 48b9b5157841e44319025faaea8799277d0822de78b2c25c0a5785de17d198fa6d802c40bc3113dc604d6e57ecdf943acdd101d561e1136f78fa2ab65e8f9841 WHIRLPOOL 77db59a508592eb185c597fbb2f10b2da9b0f78f56bf1af76bb30dd805ee796b71f75bb3005624b640192629968053b40065ccd278dc979159fedad3819ab69a
+DIST relax-3.2.0.src.tar.bz2 84952073 SHA256 94aafb42d181fbc78e21c51fb343dc0e671f7d415ebc2a99ff269c181eada11d SHA512 272a944db12f37903ec61ff9d17d1f7a4fbd745c1d306334b6adb41234751d3fed9edd818dbf7874abb36bdea29dd9e94e50f15ec490d182db0884d74a56d902 WHIRLPOOL 422341d571c43333e30decc3d3c342df7a3a33536d2f7733a73ad3aac8729428146fe6e4026fe0298a4adc04cd17f0993b23e4da889d1453f151916e67c2b55f
 EBUILD relax-2.1.0.ebuild 1128 SHA256 2d49d317cc424da9f9f2bf86ec802dae614952d506e385a60fa95e262b0c0da3 SHA512 fa76e538545bb5a2d520d3b063ba255f2d4c0279332631f061444a697528f78c6709f3d91a946289bf80828059ff7423b0d3d5374117bf89625f360212540614 WHIRLPOOL 4e0686ab5f70ddd7243c53437978b617ee2a9be55da1eb78022863babeafffae80536048471526e6076553761ea968129e7100c960d6fc7f970b281911d4ba09
 EBUILD relax-2.2.1.ebuild 1337 SHA256 4c65b74e17d1928bfc0f42230e1ccbc6abd5963901a751a7782f3c19bf25008c SHA512 70c78139ba9a9a08404673fc970082f9e3c868b2651b80d9f7cac4c5680bec846c69d3c65e68240139dfe37957607845b0ac66f595151ee7051b745d500d095e WHIRLPOOL 219ca572d15297a779da98b2a9f7a12edd80bec89710be07d0d2b02716534c831893a0bc14a0a9f177e6cebc0283c4d25872c4265a7f6f20610c0b17feafd236
 EBUILD relax-2.2.5.ebuild 1521 SHA256 f9192d970b2e70dcebdfc6ebd4658459cf5ac88a1b74886cf456108633ccf2c3 SHA512 7a4f13a4be29ef48082e82e6ec7bc6f6b3e1da72ed32e914b9f202c83f61868d850f3c4f2410407ad4c1be5ce5939fb16330d403bcdbdea12fc69e0070a15007 WHIRLPOOL ba6768c596b799456d18f85450520b7de81b5688df9ec3762023b54bf82f3398ed9eea862d242a064ffd3f71f8f73315b15d8734ace7a0196e4fc0b82be8ad99
@@ -36,25 +37,26 @@ EBUILD relax-3.1.5.ebuild 1593 SHA256 bf7ec065a1115dd8e9b0c30a94cccde3e56c5c0d0a
 EBUILD relax-3.1.6.ebuild 1593 SHA256 15cd6d0d92845723d4f0519a479750af6279340cb61b4b9b6daca2abc5af4a63 SHA512 2490c695927486c13a80be55f7bec00afab782ab8bf7a844109c56cd493e019fc1083779b6baf9c2547f728844b7ba0950f3ef68d8848454ba86a6734d654cfb WHIRLPOOL 95dc73c6d5f950dd7efda4d6930960417a9a83b5a8fac9d7df35ad3cafc932d8a1da948cc31f93ba97950e5a51fb96dbb8728db62905d7b20e0708996490ecee
 EBUILD relax-3.1.7-r1.ebuild 1630 SHA256 9ab42b27756644cef8bbaa093f706ba1aaa29fcbe8ef5b2304e2493b4383e251 SHA512 6724a427451c650a7219ee4d364104ad7572012e21935fa7ba43a142f4a5a8459616cab92a83608c45cf9d51c852a25deee923b1d4e85b8e15c3a13d8014e332 WHIRLPOOL fc8f4e30afb80402524a3c5c038c5caca28f30aa124394a0260ed3e95da59ebbc4fe958b06dc6d439cda13464b720e54ac261e5ca647c8bf583c225ed5719e7d
 EBUILD relax-3.1.7.ebuild 1593 SHA256 43d04c915de5e6aed8ccf131a3ceb9e01636dd62a926abae35c73d03cc43383b SHA512 6072a94e72932b9ef9d6ae9dbe44e2fff6a59338e505aa0352fee3379da4dc83afc68252809f6459e1cbb677d33baf3fec588bc6c87f9c703f76fb610c68c6e9 WHIRLPOOL 625fcd1090c71f300b740b6d1f4f9102ddbea49064c9b57c1949581c84d61bd040abbd5aaa94a8174803c407f9852bd9393d9e1c17fa69efed850b5de8e22109
+EBUILD relax-3.2.0.ebuild 1646 SHA256 dc4f46a0871af28723b5089fd6a5ccaacf236306fa514635cf383537dc170252 SHA512 d8c39dc6317ff956cb4fa0e7653a1a2393c3f74f5215d1d9f198d79cafd4590aa8a20df5f9620be6f3f5e71ad2c3cdf7e830a30afe4c878e66501198e7ff35fb WHIRLPOOL bb10e600807f49798070b81a01474f8b16babf5751e7a2a73bd9445d34a7a28ede806f89dcbd7f9b619aba03c9a4884237684cdd84bb5d74e55f00c2d15851e9
 EBUILD relax-9999.ebuild 1621 SHA256 0f7a800c351dcc86fa2b43b10bc0cc1e0126a5cdf5d3489928070a475ec2ad2e SHA512 820143e457b8282ad7b33ac4013889c016b6763a834718f0c33a52b9da3f367776200206fc95aab4220866819898ad72e1fd48e8cb6f9f3272c278e44eb947fb WHIRLPOOL f4ced5b9c344f7a1abdffff6f8d8163701399ce45625cae26a328a8d80705ecfe6833bf8ec398decb5c4993080a212fc9b41653bca88f0c980e28d6b873ee4ab
-MISC ChangeLog 3476 SHA256 83e685cb5aa8578fe1e299f8f87a37fdc389c938cafc4e3c25eb5b15d6c5b276 SHA512 af9a788216bd88b08a9b0af4e776ab7a61bc8ff9d54eb5bb39f804610eab028498194ba3e367bb255235e0ae4752f44a88b4a0a94cba5b6cdfe8d73c043d167d WHIRLPOOL 0d8fa16c955343cf470b325ab8d85ef0081c6ddb7ff2183924137995a8bb9a50b5ec823338b3e185c9edd79c563fb8217fa4d89e8eb53d17ae79b97805f46544
+MISC ChangeLog 3588 SHA256 fd9e9e6a72087234633863584c25c4ad2e23d504c3fdf0adb4e963848e9a6f16 SHA512 299cf9570f8510ce63767d487a3010cf41f39cd777d7ee141b5d2379c4c1ba399f944acd630ab3ae5f539ee3237c71cff9f0043ec2db76be3dbaafcd5470d3b7 WHIRLPOOL 6aeab06073ee874609d9ad745f8bef9e910bbaffb500d5b17bc322392e1bb55787bbc7f3d2e091f4c31cb89f0f060a5306b612cb78b31d564586d28479d5fa15
 MISC metadata.xml 1315 SHA256 58aef1b2b940b7211a85032dfc7212025aca6a3cd313b1a6e203854bbd3dd03e SHA512 dcb1d935782546693b79aa74dc37d55701ff4cb1756860a7f0d9919534ad2ae6f1dcad20cace867b10297c577cb6444dd5e212b13f57c3d81b30b382d8458c04 WHIRLPOOL e2de7c85fb3494a98c2ee1b08dd06d28676f43f64367ad29a8723f712e12e9052daa82794bb6626506de568701b1ea09efe059a8d3a13f6aee5fd607a913e441
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCgBmBQJTdKpCXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJTfbn2XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirPkEP/3567ccI7NvB4jGG7qgkcUT4
-QVcY7w1/4q0iH+NEasyAavwbOZKq6WJZXO9e+0+JKWfyNlLPDpWl6RN+e7pSLHKN
-tHqaKy2SrrAPGXVr92APcBKxhkSw2ujfbzAhr9cT8BWgWtH2+BMqv47F+EHiXFte
-+3et9SSB9rL1Gi9lriGR0mnrWI4oxV2qHhlJvP/rvTqAeVH8oxfTHnxEIBEQ9B/x
-au7qowcyCcdu3N/z2yUa89H5fQwZwmoLmbudHrsvPuKhJSH3vORusZ42I/7TUgP1
-88ZUzj8bTfGC7q3/PvEu+X9YsYQJrOEPyonJ9qW2uN3IgNY1bOk3lb8/RbE+yh3b
-NO5yac81b/U/+Xwk5iTkMgDVoWxIx/jnKMvImiHbJMVtYx/ORHsI1ruHgARe2qIE
-7uAZJ5c1ohR6egyhj0U+XzD912DbFkHVjlFLXn93k809rj991owlXt472j3gD3TY
-JcdcprEgqTP11ruw5maTR7RSDD0u0F/DsHkPiaV//fDhAxMWxA9eAWzt2c7STOYc
-/7sWRShWcb5Q1PXIL3lkKb6L2dC9Iz/FJW4s/r0Qphu3VaIG4FH4djIojmKx/WyV
-w+P8cA0h2neXrHBs3vuMZBqv1cpgkjxIqzrzWp0b9apFDhLzIIiPvU2H3cVbDctv
-B5gZL5VenKB39t+0wqLE
-=kdC7
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirFTEQAJaoRQPuvdNRDWwhFI1mSNMf
+Z5TOjR0H2IjkkVkX/WPfK+yO5cEUYs1utHWIupfe2TNxfCvBo7SaY/XUumsv9LjE
+f9ewguVGH14gf21xhA8wTRvyERYsjgrL2rCCXlnZyALIEvS3pjQf3Jbh5y5LLldw
+f89a3XFqsYruNqy+nCV/jBbv36CGJKnaR4NpqqItAkbgKNBYox9fpOwAua0QQsQ5
+F2ly10OXBXLN5ue3WAjhQpjq1aVoSDPME4tidSF5qcBfEpOsTPdxg3JhNPYZn4Qu
+ei0phrB3y3LYm2vU4ifAcCyRbO9OCbTGRbH04co+Mg8SJeVMQyq6K6lQmKrSnYGd
+srxNBRxs9MfvsmBPxcfxJwhBXpeD2CToHMJfo82dWrq5STD4ehiZB5UW/KwVv1Py
+Jh3axgf5Fyc1aMZ+hgCQyXIlNz2geI/4GDXEphaP86GCHmeh5DFPtnD6ndwY98PR
+E8XCjuqmVfQXbdf6cMHf1rnMVvQyefn9atgrte/PfIn95RSUtEaeW1b8AchKxte4
+o3odwKKXZBuLZ/iqTWM2eT8wn6EJ2bj5HbMRN1XMvpF2Al3bWia7PjLV+CcnO/sO
+e/AQtxNogzmC79Y7t4p5ZgIVl6qEhd8OzHO+ddEvgfwynq1e9FZ24y5qNdL01IFg
+YG7++loQaKXGl/I3BWfw
+=TRY/
 -----END PGP SIGNATURE-----
